Page navigation turned into a component and pagination added to page navigation archives.

--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -16,7 +16,7 @@ uniqueTags.forEach((tag) => {
 <ul>
     {
         uniqueTags.map((tag) => {
-            let tagURL = `/blog/tags/${tag}`;
+            let tagURL = `/blog/tags/${tag}/1`;
             return (
                 <li>
                     <a class="tag" href={tagURL}>
