--- a/src/components/Metadata.astro
+++ b/src/components/Metadata.astro
@@ -27,7 +27,7 @@ const fullDate =
         <dt><b>Tags:</b></dt>
         {
             frontmatter.tags.map((tag) => {
-                let tagURL = `/blog/tags/${tag}`;
+                let tagURL = `/blog/tags/${tag}/1`;
                 return (
                     <dd>
                         <a class="tag" href={tagURL}>
