--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -23,12 +23,9 @@ const { page } = Astro.props;
     <ul>
         {
             page.data.map((blog) => (
-                <NavCard
-                    cardURL={blog.url}
-                    cardHeading={blog.frontmatter.title}
-                    cardDescription={blog.frontmatter.description}
-                    cardImage={blog.frontmatter.image}
-                />
+                <>
+                    <NavCard post={blog} />
+                </>
             ))
         }
     </ul>
