--- a/src/components/NavCard.astro
+++ b/src/components/NavCard.astro
@@ -25,6 +25,7 @@ const { post, titlePrefix = "" } = Astro.props;
         border: 1px solid black;
         border-radius: 4px;
         margin: 1rem 0;
+        background-color: #e8e8e8;
     }
     li:hover,
     li:focus {
