no idea what this commit is for :P

--- a/src/components/Metadata.astro
+++ b/src/components/Metadata.astro
@@ -68,5 +68,6 @@ const fullDate =
     a.tag {
         padding: 0.2rem 0.4rem;
         margin: -0.2rem 0;
+        background-color: var(--light-grey);
     }
 </style>
