--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -33,5 +33,6 @@ const uniqueTags = [
     li {
         list-style: none;
         margin-right: 0.5rem;
+        background-color: var(--light-grey);
     }
 </style>
