--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,20 +1,22 @@
 ---
-const fetchblogs = () => {
-    fetch("http://192.168.1.109:1337/api/blogs", {
+import Layout from "../layouts/Layout.astro";
+const description = "Does this work?";
+const fetchblogsasync = async () => {
+    const response = await fetch("http://192.168.1.109:1337/api/blogs", {
         method: "GET",
         headers: {
             "Content-Type": "application/json",
             authorization: `bearer ${import.meta.env.API_TOKEN}`,
         },
-    })
-        .then((response) => {
-            if (!response.ok) {
-                throw new Error("API issues.");
-            }
-            return response.json();
-        })
-        .then((data) => console.log(data))
-        .catch((error) => console.error(error));
+    });
+    const data = await response.json();
+    return data;
 };
-fetchblogs();
+const fetchdata = await fetchblogsasync();
+console.log(fetchdata.data);
+const title = fetchdata.data[0].attributes.Title;
 ---
+
+<Layout title={title} description={description}>
+    <p>{fetchdata.data[0].attributes.Content}</p>
+</Layout>
