--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -27,6 +27,7 @@ filteredBlogs.forEach((blog, i) => {
         nextInSeries = filteredBlogs[i + 1];
     }
 });
+console.log(frontmatter);
 ---
 
 <Layout title={frontmatter.title} description={frontmatter.description}>
