--- a/src/pages/test/[page].astro
+++ b/src/pages/test/[page].astro
@@ -1,40 +1,9 @@
 ---
 import Layout from "../../layouts/BlogLayoutStrapi.astro";
 import PageNav from "../../components/PageNav.astro";
-import fetchApi from "../../components/strapi";
-/*const fetchblogsasync = async () => {
-    const response = await fetch("http://192.168.1.109:1337/api/blogs", {
-        method: "GET",
-        headers: {
-            "Content-Type": "application/json",
-            //@ts-ignore
-            authorization: `bearer ${import.meta.env.API_TOKEN}`,
-        },
-    });
-    const data = await response.json();
-    return data;
-};
-
-const fetchdata = await fetchblogsasync();
-const blog = fetchdata.data[0].attributes;
-const blogs = fetchdata.data;
-*/
-const blogsG = await fetchApi({
-    endpoint: "blogs",
-    wrappedByKey: "data",
-});
-const blogsArrayG = [];
-//@ts-ignore
-blogsG.forEach((blog) => blogsArrayG.push(blog.attributes));
+import blogsArray from "../../components/fetchBlogs";
 
 export async function getStaticPaths({ paginate }) {
-    const blogs = await fetchApi({
-        endpoint: "blogs",
-        wrappedByKey: "data",
-    });
-    const blogsArray = [];
-    //@ts-ignore
-    blogs.forEach((blog) => blogsArray.push(blog.attributes));
     return paginate(blogsArray, {
         pageSize: 1,
     });
@@ -42,4 +11,4 @@ export async function getStaticPaths({ paginate }) {
 const { page } = Astro.props;
 ---
 
-<Layout blog={page.data[0]} blogs={blogsArrayG} />
+<Layout blog={page.data[0]} blogs={blogsArray} />
