--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -1,18 +1,15 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import NavCard from "../../components/NavCard.astro";
+import NavCard from "../../components/NavCardStrapi.astro";
 import Tags from "../../components/Tags.astro";
 import PageNav from "../../components/PageNav.astro";
+import blogsArray from "../../components/fetchBlogs";
 const title = "My Blog";
 const description = "A list of all my blog posts";
 
 export async function getStaticPaths({ paginate }) {
-    const allBlogs = await Astro.glob("./*.mdx");
-    const nonDraftBlogs = allBlogs
-        .filter((blog) => !blog.frontmatter.draft)
-        .reverse();
-
-    return paginate(nonDraftBlogs, { pageSize: 10 });
+    const reversedArray = [...blogsArray].reverse();
+    return paginate(reversedArray, { pageSize: 10 });
 }
 const { page } = Astro.props;
 ---
