hotfix for blog navigation

--- a/src/components/NavCardStrapi.astro
+++ b/src/components/NavCardStrapi.astro
@@ -1,5 +1,5 @@
 ---
-const { post, titlePrefix = "", slugPrefix = "" } = Astro.props;
+const { post, titlePrefix = "", slugPrefix = "/blog/" } = Astro.props;
 ---
 
 <li>
