--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -70,10 +70,11 @@
         border-radius: 5px;
         font-size: 1.1rem;
         font-weight: 500;
+        outline: solid 1px #00000000;
     }
     a:focus,
     a:hover {
-        outline: solid 1px black;
+        outline-color: black;
         font-weight: 600;
     }
     div.wrapper > a:focus,
