--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,59 +3,52 @@ import Layout from "../layouts/Layout.astro";
 import NavCard from "../components/NavCard.astro";
 const title = "Welcome!";
 const description = "A description for my home page";
-const allBlogs = await Astro.glob("./blog/*.mdx");
-/*const latest = (blogs) => {
-    let pubDate = new Date("1990-01-01");
-    let latestBlog = {};
-    blogs.forEach((blog, i) => {
-        let date = new Date(blog.frontmatter.pubDate);
-        if (date > pubDate) {
-            pubDate = date;
-            latestBlog = blog;
-        }
-    });
-    return latestBlog;
-};*/
-let latestBlog = allBlogs.reverse()[0];
 ---
 
 <Layout title={title} description={description}>
-    <img src="/img/portrait.jpg" />
-    <p class="focus">
-        Hi, I'm Rohan, and this is my first attempt at a personal website
-        and&nbsp;blog!
-    </p>
-    <h2>What's Here?</h2>
-    <h3>A Blog</h3>
-    <p>
-        I'm hoping to share some of my thoughts here &ndash; some old and some
-        new. But as I'm not a big reader myself (and seeing how I sometimes feel
-        overwhelmed by how much content there is out there), I'm planning to
-        only publish things that I think are really worth reading. This means it
-        should be pretty easy to keep up with if you're interested in me or
-        my&nbsp;thoughts!
-    </p>
-    <NavCard post={latestBlog} titlePrefix="Latest Blog: " />
-    <h3>Web Experiments</h3>
-    <p>
-        I've also been learning web development for fun since early 2022, so
-        this is an opportunity for me to play around and try some things. I'm
-        hoping to add different features over time (e.g. an RSS feed so you can
-        subscribe to updates if you're so&nbsp;inclined).
-    </p>
-    <h3>Under Construction</h3>
-    <p>
-        This site is currently under construction, so please bear with the
-        various unfinished&nbsp;bits.
-    </p>
+  <img src="/img/portrait.jpg" />
+  <p class="focus">
+    Hi, I'm Rohan, and this is my personal website and&nbsp;blog!
+  </p>
+  <h2>What's Here?</h2>
+  <h3>A Blog</h3>
+  <p>
+    I've been using this space to share and reflect on my own experiences, for
+    example:
+    <ul>
+      <li>
+        <a href="/blog/series/spiritual experiences/1"
+          >my spiritual experiences
+        </a>
+      </li><li>
+        <a href="/blog/series/reading the bible/1"
+          >my experiences of reading the Bible
+        </a>
+      </li>
+    </ul>
+    The posts are organised into series, and I'd encourage you to read them in order
+    as a series, rather than starting with the latest&nbsp;one.
+  </p>
+  <h3>Web Experiments</h3>
+  <p>
+    I've also been learning web development for fun since early 2022, so this is
+    an opportunity for me to play around and try some things. I'm hoping to add
+    different features over time (e.g. an RSS feed so you can subscribe to
+    updates if you're so&nbsp;inclined).
+  </p>
+  <h3>Under Construction</h3>
+  <p>
+    This site is currently under construction, so please bear with the various
+    unfinished&nbsp;bits.
+  </p>
 </Layout>
 <style>
-    img {
-        width: 200px;
-        max-width: 30vw;
-        height: auto;
-        float: right;
-        margin: 0 0 0.5rem 1rem;
-        border-radius: 4px;
-    }
+  img {
+    width: 200px;
+    max-width: 30vw;
+    height: auto;
+    float: right;
+    margin: 0 0 0.5rem 1rem;
+    border-radius: 4px;
+  }
 </style>
